modules/observability/logging-operator/base/resources/configs/networkpolicies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  ingress: []
  egress: []
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-logging-operator
spec:
  podSelector:
    matchLabels: {}
  policyTypes:
  - Egress
  egress:
  - {}
